Replace `THashMap` and `THashSet` with `HashMap` and `HashSet`, update deprecated APIs, and improve code readability in indexing, inspections, and completion providers.